--- a/css/admin.css
+++ b/css/admin.css
@@ -19,6 +19,15 @@ h1{
     position: relative;
 }
 
+#studentNames{
+    text-align: center;
+    color: #00447C;
+    font-size: 24px;
+    width: 65%;
+    position: relative;
+    margin: 0 auto;
+}
+
 #userInfo{
     margin-top: 0;
 }
