--- a/css/admin.css
+++ b/css/admin.css
@@ -79,6 +79,6 @@ h1{
     width: 50px;
 }
 
-#playerOneName, #playerTwoName, #headerPlayerOne, #headerPlayerTwo{
+#playerOneName, #playerTwoName, #headerPlayerOne, #headerPlayerTwo, #tablePlayerOneCard, #tablePlayerTwoCard, #tablePlayerOnePoints, #tablePlayerTwoPoints{
     text-transform: capitalize;
 }
