--- a/css/admin.css
+++ b/css/admin.css
@@ -62,21 +62,43 @@ h1{
     font-weight: bold;
 }
 
+#wheatSteelPeriods{
+    text-align: center;
+    color: black;
+    font-size: 24px;
+    width: 63%;
+    position: relative;
+    margin: 0 auto;
+    font-weight: bold;
+}
+
 .tableHeader{
     color:#FFCB00;
     background-color:#00447C;
     font-weight:bold;
 }
 
-.card, .point{
+.card, .point, .roundHeader{
     width: 100px;
 }
 
-.roundCol{
+.roundCol, .resourceCol{
     color:#FFCB00;
     background-color:#00447C;
     font-weight:bold;
+    text-align: center;
+}
+
+.roundCol{
     width: 50px;
+}
+
+.resourceCol{
+    width: 250px;
+}
+
+.amount{
+    text-align: center;
 }
 
 #playerOneName, #playerTwoName, #headerPlayerOne, #headerPlayerTwo, #tablePlayerOneCard, #tablePlayerTwoCard, #tablePlayerOnePoints, #tablePlayerTwoPoints{
