--- a/css/index.css
+++ b/css/index.css
@@ -32,3 +32,15 @@ body {
     font-size: 20px;
     border-radius: 5px;
 }
+
+.logo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px; /* Adjusted margin to create more space from top*/
+}
+
+.logo {
+    max-width: 100%;
+    height: auto;
+}
