--- a/css/header.css
+++ b/css/header.css
@@ -14,7 +14,7 @@
     transform: rotate(135deg);
     border: 3px #FFCB00 solid;
     /*transform-origin: 298px 64px;*/
-    width: 120px;
+    width: 120px; /*60*/
     left: 250px;
     top: 10px;
     position: absolute;
@@ -33,7 +33,8 @@
 }
 .links{
     color: #00447C;
-    padding-right: 50px; /*50px*/
+    padding-left: 260px; 
+    padding-right: auto;
     font-family: Arial;
     font-size: 24px;
     font-weight: 700;
