--- a/css/studentRedBlack.css
+++ b/css/studentRedBlack.css
@@ -27,3 +27,27 @@ body{
     top: 200px;
     left: 70%;
 }
+
+#pleaseWait{
+    position: absolute;
+    width: 20%;
+    margin: 0 auto;
+    text-align: center;
+    top: 250px;
+    left: 65%;
+}
+
+.loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    /*-webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
